--- a/react_unit_testing_demo/src/app.scss
+++ b/react_unit_testing_demo/src/app.scss
@@ -1,5 +1,16 @@
 body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  color: darkgoldenrod;
   background: lightgray;
   margin: 0;
   padding: 0;
+}
+
+.main {
+  width: 100%;
+  min-width: 980px;
+  padding: 0 10px;
+  margin: 20px auto 80px;
 }
